--- a/BolWallet/Pages/EcryptedCitizenshipPage.razor
+++ b/BolWallet/Pages/EcryptedCitizenshipPage.razor
@@ -177,7 +177,7 @@
                     <MudButton ButtonType="MudBlazor.ButtonType.Submit"
                                Variant="MudBlazor.Variant.Filled"
                                Color="Color.Primary"
-                               Class="ml-auto" Disabled="!ViewModel.HasAddedMandatoryFiles">
+                               Class="ml-auto" Disabled="!ViewModel.HasAddedMandatoryFiles || !string.IsNullOrEmpty(ViewModel.NinValidationErrorMessage)">
                         Submit
                     </MudButton>
                 </MudItem>
