Implement check to avoid multiple wallet creations

--- a/BolWallet/Pages/GenerateWalletWithPasswordPage.razor
+++ b/BolWallet/Pages/GenerateWalletWithPasswordPage.razor
@@ -1,6 +1,9 @@
 ﻿@page "/generate-wallet-with-password"
+@using Microsoft.Extensions.Logging
 
 @inherits MvvmComponentBase<GenerateWalletWithPasswordViewModel>
+
+@inject ILogger<GenerateWalletWithPasswordPage> logger;
 
 <MudThemeProvider/>
 
@@ -36,6 +39,19 @@
 
 @code {
     PasswordForm passwordForm = new PasswordForm();
+
+    protected override async Task OnInitializedAsync()
+    {
+        try
+        {
+            await ViewModel.OnInitializeAsync();
+        }
+        catch (Exception ex)
+        {
+            logger.LogError(ex, "Error submitting form");
+            await Toast.Make(ex.Message).Show();
+        }
+    }
 
     private async Task OnValidSubmit(EditContext context)
     {
