Change #582cd4 and DarkStateBlue color to primary color

--- a/src/BolWallet/Views/AccountPage.xaml
+++ b/src/BolWallet/Views/AccountPage.xaml
@@ -35,7 +35,7 @@
 				Grid.Row="1"
 				Grid.ColumnSpan="3" 
 				CornerRadius="25"
-				BackgroundColor="#582cd4">
+				BackgroundColor="{DynamicResource Primary}">
 					<StackLayout
 							VerticalOptions="CenterAndExpand"
 							Orientation="Vertical">
@@ -59,21 +59,21 @@
 					</StackLayout>
 				</Frame>
 
-				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+				<Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
 						<Label Text="Total Balance" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
 						<Label Text="{Binding BolAccount.TotalBalance}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" />
 					</StackLayout>
 				</Frame>
 
-				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+				<Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
 						<Label Text="Claim Balance" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
 						<Label Text="{Binding BolAccount.ClaimBalance}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" />
 					</StackLayout>
 				</Frame>
 
-				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+				<Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
 						<Label Text="EDI" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
 						<Label Text="{Binding BolAccount.Edi}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White">
@@ -84,21 +84,21 @@
 					</StackLayout>
 				</Frame>
 
-				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+				<Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
 						<Label Text="Account Status" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
 						<Label Text="{Binding BolAccount.AccountStatus}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" />
 					</StackLayout>
 				</Frame>
 
-				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+				<Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
 						<Label Text="Account Type" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
 						<Label Text="{Binding BolAccount.AccountType}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" />
 					</StackLayout>
 				</Frame>
 
-				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+				<Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
 						<Label Text="Main Address" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
 						<Label Text="{Binding BolAccount.MainAddress}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" >
@@ -109,7 +109,7 @@
 					</StackLayout>
 				</Frame>
 
-				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+				<Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
 						<Label Text="BlockChain Address" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
 						<Label Text="{Binding BolAccount.BlockChainAddress}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" >
@@ -120,7 +120,7 @@
 					</StackLayout>
 				</Frame>
 
-				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+				<Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
 						<Label Text="Social Address" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
 						<Label Text="{Binding BolAccount.SocialAddress}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White">
@@ -131,7 +131,7 @@
 					</StackLayout>
 				</Frame>
 
-				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+				<Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
 						<Label Text="Voting Address" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
 						<Label Text="{Binding BolAccount.VotingAddress}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" >
@@ -142,7 +142,7 @@
 					</StackLayout>
 				</Frame>
                 
-                <Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+                <Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
                     <StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
                         <Label Text="Certifier" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
                         <Label Text="{Binding BolAccount.IsCertifier}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" />
@@ -152,22 +152,22 @@
                             <Setter Property="BackgroundColor" Value="#27C1F3"/>
                         </DataTrigger>
                         <DataTrigger  TargetType="Frame" Binding="{Binding BolAccount.IsCertifier}" Value="False">
-                            <Setter Property="BackgroundColor" Value="#582cd4"/>
+                            <Setter Property="BackgroundColor" Value="{DynamicResource Primary}"/>
                         </DataTrigger>
                     </Frame.Triggers>
                 </Frame>
                 
-                <Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+                <Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
                     <StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
                         <Label Text="Number of Certifications" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
                         <Label Text="{Binding BolAccount.Certifications}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" />
                     </StackLayout>
                 </Frame>
                 
-                <Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+                <Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
                     <StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
                         <Label Text="Certifiers" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
-                        <Grid Padding="10" BackgroundColor="#582cd4">
+                        <Grid Padding="10" BackgroundColor="{DynamicResource Primary}">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
@@ -192,7 +192,7 @@
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <ViewCell>
-                                        <Grid Padding="10" BackgroundColor="#582cd4">
+                                        <Grid Padding="10" BackgroundColor="{DynamicResource Primary}">
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="Auto" />
                                             </Grid.RowDefinitions>
@@ -222,14 +222,14 @@
                     </StackLayout>
                 </Frame>
                 
-                <Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+                <Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
                     <StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
                         <Label Text="Certification Requests" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
                         <ListView ItemsSource="{Binding CertificationRequests}" HorizontalOptions="Center" >
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <ViewCell>
-                                        <Grid Padding="10" BackgroundColor="#582cd4">
+                                        <Grid Padding="10" BackgroundColor="{DynamicResource Primary}">
                                             <Grid.RowDefinitions>
                                                 <RowDefinition Height="Auto" />
                                             </Grid.RowDefinitions>
@@ -248,42 +248,42 @@
                     </StackLayout>
                 </Frame>
 
-				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+				<Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
 						<Label Text="Last Certification Height" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
 						<Label Text="{Binding BolAccount.LastCertificationHeight}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" />
 					</StackLayout>
 				</Frame>
 
-				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+				<Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
 						<Label Text="Last Certifier Selection Height" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
 						<Label Text="{Binding BolAccount.LastCertifierSelectionHeight}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" />
 					</StackLayout>
 				</Frame>
 
-				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+				<Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
 						<Label Text="Registration Height" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
 						<Label Text="{Binding BolAccount.RegistrationHeight}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" />
 					</StackLayout>
 				</Frame>
 
-				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+				<Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
 						<Label Text="Last Claim Height" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
 						<Label Text="{Binding BolAccount.LastClaimHeight}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" />
 					</StackLayout>
 				</Frame>
 
-				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+				<Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
 						<Label Text="Last Claim" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
 						<Label Text="{Binding BolAccount.LastClaim}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" />
 					</StackLayout>
 				</Frame>
 
-				<Frame CornerRadius="25" BackgroundColor="#582cd4" Padding="15">
+				<Frame CornerRadius="25" BackgroundColor="{DynamicResource Primary}" Padding="15">
 					<StackLayout VerticalOptions="CenterAndExpand" Orientation="Vertical">
 						<Label Text="Total Transactions" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" TextColor="White" />
 						<Label Text="{Binding BolAccount.TransactionsCount}" HorizontalOptions="Center" HorizontalTextAlignment="Center" FontAttributes="Bold" FontSize="10" TextColor="White" />
