--- a/src/BolWallet/Views/ClaimPage.xaml
+++ b/src/BolWallet/Views/ClaimPage.xaml
@@ -12,7 +12,7 @@
 		  Grid.Row="3"
 		  Grid.ColumnSpan="3"
 		  CornerRadius="45"
-		  BackgroundColor="#582cd4">
+		  BackgroundColor="{DynamicResource Primary}">
 			<StackLayout
 			  VerticalOptions="CenterAndExpand"
 			  Orientation="Vertical">
@@ -35,7 +35,7 @@
 		  Grid.Row="3"
 		  Grid.ColumnSpan="3"
 		  CornerRadius="45"
-		  BackgroundColor="#582cd4">
+		  BackgroundColor="{DynamicResource Primary}">
 			<StackLayout
 			  VerticalOptions="CenterAndExpand"
 			  Orientation="Vertical">
@@ -58,7 +58,7 @@
 		  Grid.Row="3"
 		  Grid.ColumnSpan="3"
 		  CornerRadius="45"
-		  BackgroundColor="#582cd4">
+		  BackgroundColor="{DynamicResource Primary}">
 				<StackLayout
 			  VerticalOptions="CenterAndExpand"
 			  Orientation="Vertical">
@@ -81,7 +81,7 @@
 		  Grid.Row="3"
 		  Grid.ColumnSpan="3"
 		  CornerRadius="45"
-		  BackgroundColor="#582cd4">
+		  BackgroundColor="{DynamicResource Primary}">
 			<StackLayout
 			  VerticalOptions="CenterAndExpand"
 			  Orientation="Vertical">
