--- a/src/BolWallet/Views/GetCertifiedPage.xaml
+++ b/src/BolWallet/Views/GetCertifiedPage.xaml
@@ -47,21 +47,21 @@
                     Text="{Binding CertificationRound, StringFormat='Certification Round {0}'}"
                     HorizontalTextAlignment="Center"
                     FontSize="24"
-                    TextColor="DarkSlateBlue" />
+                    TextColor="{DynamicResource Primary}" />
                 <Label
                     Text="You need 2 certifications to Open your Account."
                     IsVisible="{Binding IsAccountOpen, Converter={StaticResource InverseBooleanConverter}}"
                     HorizontalTextAlignment="Center"
-                    TextColor="DarkSlateBlue" />
+                    TextColor="{DynamicResource Primary}" />
                 <Label
                     Text="Your Account is Open but you can acquire additional certifications."
                     IsVisible="{Binding IsAccountOpen}"
                     HorizontalTextAlignment="Center"
-                    TextColor="DarkSlateBlue" />
+                    TextColor="{DynamicResource Primary}" />
 				<Label
 				Text="Code Name"
 				FontSize="18"
-				TextColor="DarkSlateBlue" />
+				TextColor="{DynamicResource Primary}" />
 
 				<Frame BackgroundColor="WhiteSmoke" Padding="10">
 					<Label Text="{Binding BolAccount.CodeName}" TextColor="Black">
@@ -74,7 +74,7 @@
 				<Label
 				Text="Account Status"
 				FontSize="18"
-				TextColor="DarkSlateBlue" />
+				TextColor="{DynamicResource Primary}" />
 
 				<Frame BackgroundColor="WhiteSmoke" Padding="10">
 					<Label Text="{Binding BolAccount.AccountStatus}" TextColor="Black">
@@ -89,7 +89,7 @@
 			<StackLayout Spacing="15" Padding="10" IsVisible="{Binding CanSelectCertifiers}">
 				<Button 
 			        Text="Select Mandatory Certifiers"
-			        BackgroundColor="DarkSlateBlue"
+			        BackgroundColor="{DynamicResource Primary}"
 			        TextColor="White"
 			        Command="{Binding SelectMandatoryCertifiersCommand}"	/>
 
@@ -125,7 +125,7 @@
 
 				<Button 
 			        Text="{Binding CertificationRound, StringFormat='Request Certification No.{0}'}"
-			        BackgroundColor="DarkSlateBlue"
+			        BackgroundColor="{DynamicResource Primary}"
 			        TextColor="White"
 			        Command="{Binding RequestCertificationCommand}"	CommandParameter="{Binding CertifierCodename}"/>
                 
@@ -164,7 +164,7 @@
 			    <Button
 			        HorizontalOptions="Center"
 			        Text="Pay Certification Fees"
-			        BackgroundColor="DarkSlateBlue"
+			        BackgroundColor="{DynamicResource Primary}"
 			        TextColor="White"
 			        Command="{Binding PayCertificationFeesCommand}"	/>
                 
